--- a/Invoicify.Client/BlazorComponents/PartyInfoComponent.razor
+++ b/Invoicify.Client/BlazorComponents/PartyInfoComponent.razor
@@ -3,31 +3,59 @@
 @code {
     [Parameter] public string Title { get; set; }
     [Parameter] public PartyInfo PartyInfo { get; set; }
+
+    private void Clear() {
+        PartyInfo = new PartyInfo();
+    }
 }
 
 <div class="component-div form-div">
-    <h4>@Title</h4>
-    <label>First Name:</label>
-    <InputText @bind-Value="PartyInfo.FirstName" class="form-control" />
-    <label>Last Name:</label>
-    <InputText @bind-Value="PartyInfo.LastName" class="form-control" />
-    
-    <label>Email:</label>
-    <InputText @bind-Value="PartyInfo.Email" class="form-control" />
-    <label>Phone:</label>
-    <InputText @bind-Value="PartyInfo.Phone" class="form-control" />
-    
-    <label>VAT ID:</label>
-    <InputText @bind-Value="PartyInfo.VatId" class="form-control" />
-    
-    <label>Street:</label>
-    <InputText @bind-Value="PartyInfo.Address.Street" class="form-control" />
-    <label>City:</label>
-    <InputText @bind-Value="PartyInfo.Address.City" class="form-control" />
-    <label>Zip Code:</label>
-    <InputText @bind-Value="PartyInfo.Address.ZipCode" class="form-control" />
-    <label>Country:</label>
-    <InputText @bind-Value="PartyInfo.Address.Country" class="form-control" />
-    <label>State:</label>
-    <InputText @bind-Value="PartyInfo.Address.State" class="form-control" />
+    <div class="component-input-header">
+        <h4>@Title</h4>
+        <button type="button" class="btn btn-danger btn-clear" @onclick="Clear">Clear</button>
+    </div>
+    <div class="component-input-row">
+        <label>First Name:</label>
+        <InputText @bind-Value="PartyInfo.FirstName" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>Last Name:</label>
+        <InputText @bind-Value="PartyInfo.LastName" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>Email:</label>
+        <InputText @bind-Value="PartyInfo.Email" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>Phone:</label>
+        <InputText @bind-Value="PartyInfo.Phone" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>VAT ID:</label>
+        <InputText @bind-Value="PartyInfo.VatId" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>Street:</label>
+        <InputText @bind-Value="PartyInfo.Address.Street" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>City:</label>
+        <InputText @bind-Value="PartyInfo.Address.City" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>Zip code:</label>
+        <InputText @bind-Value="PartyInfo.Address.ZipCode" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>Country:</label>
+        <InputText @bind-Value="PartyInfo.Address.Country" class="form-control"/>
+    </div>
+    <div class="component-input-row">
+        <label>State:</label>
+        <InputText @bind-Value="PartyInfo.Address.State" class="form-control"/>
+    </div>
+
+
+
+
 </div>
