--- a/Invoicify.Client/Pages/Invoice/InvoiceBrowser.razor
+++ b/Invoicify.Client/Pages/Invoice/InvoiceBrowser.razor
@@ -2,14 +2,13 @@
 @using Data
 @using Data.Bags
 @using Data.DbModel
-@using FileGenerator
 @using Invoicify.Client.BlazorComponents
-@using Invoicify.Client.Invoices
 @using static Data.CurrencyTransformer
 @inject NavigationManager Navigation
 @inject HttpClient Http
 @inject IJSRuntime JS
 
+<link href="css/InvoiceBrowser&Creator.css" rel="stylesheet" />
 
 <PageTitle>Invoice Browser</PageTitle>
 <h3>Invoice Browser</h3>
@@ -19,28 +18,27 @@
         <InteractiveTable TItem="InvoiceBag" Items="_invoices" @bind-SelectedItems="_selected" MultipleSelection="false"
                           Columns="cols" OnRowClick="@_GetInvoiceInfo"/>
     </div>
-    <div>
-        @if (_selectedInvoice is not null) {
-            <div>
-                <h4>Selected invoice: @_selectedInvoice.Number</h4>
-            </div>
-            <div>
-                @if (_selectedInvoice.QrPayment is not null) {
-                    _img = _selectedInvoice.QrPayment.GetQrCode();
-                } else if(_selectedInvoice.QrSpr is not null) {
-                    _selectedInvoice.QrPayment = QrPayment.FromSprString(_selectedInvoice.QrSpr);
-                    _img = _selectedInvoice.QrPayment.GetQrCode();
-                }
-                    
-                @if (_img is not null) {
-                    <img class="qr-code" src="@_img" alt="@_selectedInvoice.QrSpr" style="max-height: 150px">
-                }
-        
+    @if (_selectedInvoice is not null) {
+        <div>
+            <h4>Selected invoice: @_selectedInvoice.Number</h4>
+            <div style="display: flex; gap: 1rem;">
                 <div>
-                    <input type="button" value="See HTML" @onclick="_GenerateHtml"/>
+                    @if (_selectedInvoice.QrPayment is not null) {
+                        _img = _selectedInvoice.QrPayment.GetQrCode();
+                    }
+                    else if (_selectedInvoice.QrSpr is not null) {
+                        _selectedInvoice.QrPayment = QrPayment.FromSprString(_selectedInvoice.QrSpr);
+                        _img = _selectedInvoice.QrPayment.GetQrCode();
+                    }
+
+                    @if (_img is not null) {
+                        <img class="qr-code" src="@_img" alt="@_selectedInvoice.QrSpr" style="max-height: 150px">
+                    }
                 </div>
-                <div>
-                    <input type="button" value="Get PDF"/>
+
+                <div style="display: flex; flex-direction: column; justify-content: space-evenly">
+                    <input type="button" class="btn btn-primary" value="See HTML" @onclick="_GenerateHtml"/>
+                    <input type="button" class="btn btn-primary" value="Get PDF" @onclick="_GeneratePdf"/>
                 </div>
             </div>
             <ul>
@@ -60,20 +58,20 @@
                 <li>Items:</li>
                 <div>
                     <ol>
-                    @foreach(var item in _selectedInvoice.Items) {
-                        <li>Item:   @item.Name</li>
-                        <ul>
-                            <li>Description:    @item.Description</li>
-                            <li>Quantity:   @item.Quantity</li> 
-                            <li>Unit Price: @item.PricePerUnit.ToString("C", CurrencyFormat(_selectedInvoice.Currency))</li>
-                            <li>Total Price:    @item.TotalPrice.ToString("C", CurrencyFormat(_selectedInvoice.Currency))</li>
-                        </ul>
-                    }
+                        @foreach(var item in _selectedInvoice.Items) {
+                            <li>Item:   @item.Name</li>
+                            <ul>
+                                <li>Description:    @item.Description</li>
+                                <li>Quantity:   @item.Quantity @item.Unit</li> 
+                                <li>Unit Price: @item.PricePerUnit.ToString("C", CurrencyFormat(_selectedInvoice.Currency))</li>
+                                <li>Total Price:    @item.TotalPrice.ToString("C", CurrencyFormat(_selectedInvoice.Currency))</li>
+                            </ul>
+                        }
                     </ol>
                 </div>
             </ul>
-        }
-    </div>
+        </div>
+    }
 </span>
 
 @code {
@@ -97,13 +95,6 @@
     private async Task _GenerateHtml() {
         if (_selectedInvoice is null)
             return;
-        
-        if(_selectedInvoice.QrSpr is not null)
-            _selectedInvoice.QrPayment = QrPayment.FromSprString(_selectedInvoice.QrSpr);
-        
-        var generator = new DocumentGenerator<InvoiceView>(_selectedInvoice);
-        var html = await generator.GetHtmlAsync();
-        await JS.InvokeVoidAsync("openHtmlInNewTab", html);
 
         var url = $"{Http.BaseAddress}invoice/{_selectedInvoice.Id}/html";
         await JS.InvokeVoidAsync("open", url, "_blank");
